[profile.dev]
debug = true

# Symbols will reside on the host, not the target
[profile.release]
debug = true

[package]
name = "drop"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7"
lsm303agr = "0.3"
rtt-target = "0.4"
micromath = "2.1.0"

[dependencies.microbit-v2]
git = "https://github.com/relia1/microbit"
branch = "embedded-hal"

[dependencies.panic-rtt-target]
version = "0.1"
features = ["cortex-m"]

# This works around old versions in the `microbit-v2`
# crate. You don't have to use this crate, just linking
# against it is sufficient.
[dependencies.cortex-m]
version = "0.7"
features = ["inline-asm", "critical-section-single-core"]

[dependencies.critical-section-lock-mut]
git = "https://github.com/pdx-cs-rust-embedded/critical-section-lock-mut"
